--- a/tickets/templates/tickets/event_form.html
+++ b/tickets/templates/tickets/event_form.html
@@ -1,7 +1,9 @@
 <h2>{{ form.instance.pk|yesno:"Edit Event,Create Event" }}</h2>
-<form method="post">
+
+<form method="post" enctype="multipart/form-data">  <!-- 👈 Important -->
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save</button>
 </form>
+
 <a href="{% url 'event_list' %}">Back to List</a>
